feat: Add About Us and Contact Us pages, new UI components, and Spanish localization.

--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -1,96 +1,96 @@
 {
   "navbar": {
-    "home": "Home",
-    "about_us": "About Us",
-    "programs": "Programs",
-    "contact_us": "Contact Us",
-    "get_started": "GET STARTED"
+    "home": "Inicio",
+    "about_us": "Sobre Nosotros",
+    "programs": "Programas",
+    "contact_us": "Contacto",
+    "get_started": "COMENZAR"
   },
   "hero": {
     "virtual": "Virtual",
-    "cohorts_yr": "4 Cohorts/Yr",
+    "cohorts_yr": "4 Cohortes/Año",
     "global": "Global",
-    "title_part1": "The",
-    "title_part2": "Mantle Mentorship",
-    "title_part3": "Program",
-    "subtitle": "Transferring the practical & life-based skill mantle to the next generation of future leaders.",
-    "learn_more": "LEARN MORE",
-    "apply_now": "APPLY NOW"
+    "title_part1": "El",
+    "title_part2": "Programa de Mentoría Mantle",
+    "title_part3": "",
+    "subtitle": "Transmitiendo habilidades prácticas y de vida a la próxima generación de futuros líderes.",
+    "learn_more": "SABER MÁS",
+    "apply_now": "APLICAR AHORA"
   },
   "about_us_page": {
-    "title_about": "About",
-    "title_us": "Us",
-    "why_title": "Why the Mantle Mentorship Programs?",
-    "why_text": "The Mantle Mentorship Programs aims to bring clarity and direction to many young people and professionals on their purpose especially during different academic and professional transition phases in their life based on expert experience from different mentors in the past to help steer the mentees to discover their unique path to their destiny and purpose for the particular season of their life, thereby avoiding costly life and professional mistakes that could be sometimes, irreversible.",
-    "benefits_title": "Added Benefits to join the",
-    "benefits_subtitle": "Mantle Mentorship Programs",
-    "benefit_1": "Expert guidance from professional experience with successful mentees across all continents.",
-    "benefit_2": "Tailor-made curriculum for each mentee after one-on-one session to project your future mentorship needs",
-    "benefit_3": "Experts in transitions management from the different stage in mentees journey",
-    "benefit_4": "Global network of mentees Alumni across 6 continents.",
-    "benefit_5": "Discounted access to published mentorship books",
-    "benefit_6": "Invitation to periodic Mantle Mentorship Alumni Conference where current mentees meet with past mentees and share experiences.",
-    "benefit_7": "Low commitment fees for the Programs",
+    "title_about": "Sobre",
+    "title_us": "Nosotros",
+    "why_title": "¿Por qué los Programas de Mentoría Mantle?",
+    "why_text": "Los Programas de Mentoría Mantle tienen como objetivo aportar claridad y dirección a muchos jóvenes y profesionales sobre su propósito, especialmente durante las diferentes fases de transición académica y profesional de sus vidas. Basado en la experiencia experta de mentores anteriores, el programa ayuda a guiar a los mentorados a descubrir su camino único hacia su destino y propósito para una etapa específica de su vida, evitando así errores de vida y profesionales costosos que, en ocasiones, pueden ser irreversibles.",
+    "benefits_title": "Beneficios adicionales para unirse al",
+    "benefits_subtitle": "Programa de Mentoría Mantle",
+    "benefit_1": "Orientación experta basada en experiencia profesional con mentorados exitosos en todos los continentes.",
+    "benefit_2": "Plan de estudios personalizado para cada mentorado después de una sesión individual para proyectar tus necesidades futuras de mentoría.",
+    "benefit_3": "Expertos en gestión de transiciones en las diferentes etapas del recorrido de los mentorados.",
+    "benefit_4": "Red global de exalumnos mentorados en 6 continentes.",
+    "benefit_5": "Acceso con descuento a libros de mentoría publicados.",
+    "benefit_6": "Invitación a conferencias periódicas de exalumnos de Mentoría Mantle, donde los mentorados actuales se reúnen con antiguos mentorados y comparten experiencias.",
+    "benefit_7": "Bajas tarifas de compromiso para los programas.",
     "chief_mentor_name": "Ebuka Umeh",
-    "chief_mentor_role": "Chief Mentor, Mantle Mentorship Program",
-    "chief_mentor_bio_1": "Ebuka Umeh is a business executive that has over 20 years’ experience providing mentorship to the different age groups and professionals on both professional and life-based matters. His love for mentoring others and providing uncommon direction to mentees had led to serve in much knowledge-based and youth communities including holding roles as a lead and mentor within Google communities between 2018 – 2023.",
-    "chief_mentor_bio_2": "In 2021, he held a mentorship session called the Young Founders Masterclass geared to young people between 15 – 25 years through Eruptify Academy to provide tutelage on the basic rudiments of setting up a business and scaling for existing businesses for young African youths.",
-    "chief_mentor_bio_3": "Between 2023 till date, under the platform Youth without Walls (YWY), he conducts an annual mentorship session with youths between 13 – 35 years, providing uncommon knowledge to over 150+ youths in Belgium annually. He has successfully mentored many young people in all the continents of the world. He is involved in many public mentoring speaking events across different cultures."
+    "chief_mentor_role": "Mentor Principal, Programa de Mentoría Mantle",
+    "chief_mentor_bio_1": "Ebuka Umeh es un ejecutivo empresarial con más de 20 años de experiencia brindando mentoría a diferentes grupos de edad y profesionales tanto en asuntos profesionales como de vida. Su pasión por mentorizar y ofrecer orientación excepcional lo ha llevado a servir en numerosas comunidades basadas en el conocimiento y juveniles, incluyendo roles como líder y mentor dentro de comunidades de Google entre 2018 y 2023.",
+    "chief_mentor_bio_2": "En 2021, dirigió una sesión de mentoría llamada Young Founders Masterclass, dirigida a jóvenes de entre 15 y 25 años a través de Eruptify Academy, para proporcionar orientación sobre los fundamentos básicos de la creación y escalado de negocios.",
+    "chief_mentor_bio_3": "Desde 2023 hasta la fecha, bajo la plataforma Youth Without Walls (YWY), realiza una sesión anual de mentoría con jóvenes de entre 13 y 35 años, proporcionando conocimientos excepcionales a más de 150 jóvenes anualmente en Bélgica. Ha mentorado con éxito a muchos jóvenes en todos los continentes y participa en numerosos eventos públicos de mentoría en diversas culturas."
   },
   "programs_page": {
-    "title_our": "Our",
-    "title_programs": "Programs",
-    "subtitle": "Choose the path that fits your journey to leadership.",
-    "program_general_title": "General Mantle Mentorship Program",
-    "program_general_desc": "A comprehensive 6-week mentorship journey designed to equip you with practical and life-based skills for future leadership.",
-    "fee_label": "Fee",
-    "duration_label": "Duration",
-    "class_size_label": "Class Size",
-    "frequency_label": "Frequency",
-    "mode_label": "Mode",
-    "what_you_get_label": "What you get",
-    "enroll_now": "Enroll Now",
-    "coming_soon": "Coming Soon",
-    "review_upcoming_title": "Review Our",
-    "review_upcoming_subtitle": "Upcoming",
-    "review_upcoming_programs": "Programs",
-    "review_upcoming_desc": "Expanding our mentorship to every stage of your journey.",
-    "program_hs_uni": "High School to University Transition Program",
-    "program_tertiary_job": "Tertiary Institution to Job Market Transition Program",
-    "program_tertiary_ent": "Tertiary Institution to Entrepreneurship Transition Program",
-    "program_job_school": "Job Market to back-to-School Transition Programs",
-    "program_career_change": "Career Change Transition Programs",
-    "program_hs_poly": "High School to Polytechnic Transition Program",
-    "program_poly_uni": "Polytechnic to University Transition Program",
-    "program_discipline": "Discipline-based skilled program",
-    "program_project": "Project-based acquisition program",
-    "program_startup": "Start-up/Young business Advisory Programs",
-    "in_development": "This program is currently in development. Check back later for details."
+    "title_our": "Nuestros",
+    "title_programs": "Programas",
+    "subtitle": "Elige el camino que se adapte a tu recorrido hacia el liderazgo.",
+    "program_general_title": "Programa General de Mentoría Mantle",
+    "program_general_desc": "Un recorrido integral de mentoría de 6 semanas diseñado para equiparte con habilidades prácticas y de vida para el liderazgo futuro.",
+    "fee_label": "Tarifa",
+    "duration_label": "Duración",
+    "class_size_label": "Tamaño de la clase",
+    "frequency_label": "Frecuencia",
+    "mode_label": "Modalidad",
+    "what_you_get_label": "Lo que obtienes",
+    "enroll_now": "Inscribirse ahora",
+    "coming_soon": "Próximamente",
+    "review_upcoming_title": "Revisa nuestros",
+    "review_upcoming_subtitle": "Próximos",
+    "review_upcoming_programs": "Programas",
+    "review_upcoming_desc": "Ampliando nuestra mentoría a cada etapa de tu recorrido.",
+    "program_hs_uni": "Programa de transición de secundaria a universidad",
+    "program_tertiary_job": "Programa de transición de educación superior al mercado laboral",
+    "program_tertiary_ent": "Programa de transición de educación superior al emprendimiento",
+    "program_job_school": "Programas de transición del mercado laboral al regreso a los estudios",
+    "program_career_change": "Programas de transición de cambio de carrera",
+    "program_hs_poly": "Programa de transición de secundaria a politécnico",
+    "program_poly_uni": "Programa de transición de politécnico a universidad",
+    "program_discipline": "Programa de habilidades basadas en disciplinas",
+    "program_project": "Programa de adquisición basado en proyectos",
+    "program_startup": "Programas de asesoría para startups y jóvenes empresas",
+    "in_development": "Este programa se encuentra actualmente en desarrollo. Vuelve más tarde para más detalles."
   },
   "contact_us_page": {
-    "title_contact": "Contact",
-    "title_us": "Us",
-    "subtitle": "We'd love to hear from you. Send us a message or reach out directly.",
-    "send_message": "Send a message",
-    "full_name": "Full Name",
-    "email_address": "Email Address",
-    "message": "Message",
-    "submit_btn": "Send Message",
-    "contact_details": "Contact details",
-    "details_text": "You can also reach us using the details below.",
-    "response_time": "We typically respond within",
-    "response_time_val": "2 – 3 working days",
-    "phone": "Phone",
-    "region_africa": "Nigeria & Africa:",
-    "region_europe": "Europe:",
-    "social_media": "Social Media"
+    "title_contact": "Contacto",
+    "title_us": "Nosotros",
+    "subtitle": "Nos encantaría saber de ti. Envíanos un mensaje o contáctanos directamente.",
+    "send_message": "Enviar un mensaje",
+    "full_name": "Nombre completo",
+    "email_address": "Correo electrónico",
+    "message": "Mensaje",
+    "submit_btn": "Enviar mensaje",
+    "contact_details": "Detalles de contacto",
+    "details_text": "También puedes comunicarte con nosotros utilizando los detalles a continuación.",
+    "response_time": "Normalmente respondemos dentro de",
+    "response_time_val": "2 – 3 días laborables",
+    "phone": "Teléfono",
+    "region_africa": "Nigeria y África:",
+    "region_europe": "Europa:",
+    "social_media": "Redes sociales"
   },
   "footer": {
-    "company": "Company",
-    "subscribe_title": "Subscribe to updates",
-    "join": "Join",
-    "copyright": "The Mantle Mentorship Program. All rights reserved.",
-    "privacy_policy": "Privacy Policy",
-    "terms_of_service": "Terms of Service"
+    "company": "Empresa",
+    "subscribe_title": "Suscribirse a las actualizaciones",
+    "join": "Unirse",
+    "copyright": "El Programa de Mentoría Mantle. Todos los derechos reservados.",
+    "privacy_policy": "Política de privacidad",
+    "terms_of_service": "Términos de servicio"
   }
 }
