--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -93,5 +93,43 @@
     "copyright": "El Programa de Mentoría Mantle. Todos los derechos reservados.",
     "privacy_policy": "Política de privacidad",
     "terms_of_service": "Términos de servicio"
+  },
+  "coming_soon_section": {
+    "title": "Próximos",
+    "title_span": "Programas",
+    "subtitle": "Sé el primero en acceder a nuestros nuevos cursos seleccionados diseñados para acelerar tu crecimiento y transición profesional.",
+    "programs": {
+      "p1": {
+        "title": "Programas Expertos de Transición, de Vida",
+        "subItems": {
+          "item1": "Programa de Transición de Escuela Secundaria a Universidad",
+          "item2": "Programa de Transición de Institución Terciaria al Mercado Laboral",
+          "item3": "Programa de Transición de Institución Terciaria a Emprendimiento",
+          "item4": "Programas de Transición del Mercado Laboral a Regreso a la Escuela",
+          "item5": "Programas de Transición de Cambio de Carrera",
+          "item6": "Programa de Transición de Escuela Secundaria a Politécnico",
+          "item7": "Programa de Transición de Politécnico a Universidad"
+        }
+      },
+      "p2": {
+        "title": "Programa de Habilidades Basado en Disciplina"
+      },
+      "p3": {
+        "title": "Programa de Adquisición Basado en Proyectos"
+      },
+      "p4": {
+        "title": "Programas de Asesoramiento para Start-ups / Jóvenes Empresas"
+      }
+    },
+    "waitlist": {
+      "title": "Únete a la Lista de Espera",
+      "description": "Obtén acceso anticipado y actualizaciones exclusivas cuando lancemos.",
+      "name_label": "Nombre Completo",
+      "name_placeholder": "Ingresa tu nombre completo",
+      "email_label": "Dirección de Correo Electrónico",
+      "email_placeholder": "tu@ejemplo.com",
+      "submit_btn": "Notifícame Cuando Esté Listo",
+      "privacy": "Respetamos tu privacidad. Sin spam, nunca."
+    }
   }
 }
