made some changes

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -200,6 +200,7 @@
       "remove": "Remove and replace"
     },
     "submit": "Submit Application",
+    "pay": "Pay and Submit",
     "loading": "Loading Registration..."
   }
 }
