--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -200,6 +200,7 @@
       "remove": "Quitar y reemplazar"
     },
     "submit": "Enviar Solicitud",
+    "pay": "Pagar y enviar",
     "loading": "Cargando Registro..."
   }
 }
