--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -200,6 +200,7 @@
       "remove": "Supprimer et remplacer"
     },
     "submit": "Envoyer la Demande",
+    "pay": " Payer et Soumettre",
     "loading": "Chargement de l'inscription..."
   }
 }
